--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/1483/1483285.png"
+    />
+    <title>Maps</title>
+    <link rel="stylesheet" href="/CSS/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <span>Z00 WALKING</span>
+    </header>
+    <div id="map" class="map"></div>
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=5eca22fe-0a55-452a-8d5e-e64f4be09851&lang=ru_RU"
+      type="text/javascript"
+    ></script>
+    <script src="/JS/script.js"></script>
+    <footer>
+      <span>Данные карты разработаны для тех, кому они нужны!</span>
+    </footer>
+  </body>
 </html>
