--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
-      href="https://cdn-icons-png.flaticon.com/512/1483/1483285.png"
+      href="https://cdn-icons-png.flaticon.com/512/1687/1687357.png"
     />
     <title>Maps</title>
     <link rel="stylesheet" href="/CSS/style.css" />
   </head>
   <body>
     <header>
-      <span>Z00 WALKING</span>
+      <span>ZOO WALKING</span>
     </header>
     <div id="map" class="map"></div>
     <script
